Fixing spacing of ItemDetails

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -17,7 +17,7 @@
 }
 
 footer {
-    position: fixed;
+    position: relative;
     left: 0;
     right: 0;
     bottom: 0;
